[gd_scene load_steps=20 format=2]

[ext_resource path="res://prefabs/SpriteShadow.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/rado_cape.png" type="Texture" id=2]
[ext_resource path="res://sprites/radu_sprites.png" type="Texture" id=3]
[ext_resource path="res://shaders/enemy_shader.shader" type="Shader" id=4]
[ext_resource path="res://scripts/RaduSpade.gd" type="Script" id=5]
[ext_resource path="res://scripts/BossArea.gd" type="Script" id=6]
[ext_resource path="res://sprites/radu_sword.png" type="Texture" id=7]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )
shader_param/blink_color = Color( 1, 1, 1, 1 )
shader_param/blink_magnitude = 0.0

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform vec4 new_color : hint_color = vec4(0.13, 0.0, 0.32, 0.75);
//uniform vec2 offset = vec2(-3.0, 3.0);
// + vec2(cos(TIME) * UV.x * UV.y, UV.y * UV.x * sin(TIME)) * SCREEN_PIXEL_SIZE * 10.0

void fragment(){
	vec4 col = textureLod(TEXTURE, UV, 1.0);
	col.a *= new_color.a;
	col.rgb *= col.a;
	col.rgb = new_color.rgb;
	COLOR = col;
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/new_color = Color( 0.13, 0, 0.32, 0.75 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6, 8 )

[sub_resource type="Animation" id=13]
resource_name = "attacking"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=14]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cape:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=15]
length = 0.2
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}

[sub_resource type="Animation" id=16]
length = 1.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Cape:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Cape:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.5, 0.8, 1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4, -3 ), Vector2( 16, -8 ), Vector2( 72, -48 ), Vector2( 85.7143, -30.8571 ), Vector2( 77.8571, -19.4286 ), Vector2( 104, -8 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Cape:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.3, 0.8, 0.9, 1, 1.1, 1.2, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "jump"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=18]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="CircleShape2D" id=11]
radius = 8.0

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 160, 88 )

[node name="RaduSpade" type="KinematicBody2D" groups=[
"enemy",
]]
material = SubResource( 1 )
collision_layer = 0
collision_mask = 33
script = ExtResource( 5 )
max_life = 100.0
damage = 2
coins_to_spawn = 50
enemy_name = "Radu Spade"

[node name="Sprite" type="Sprite" parent="."]
use_parent_material = true
position = Vector2( -1, -4 )
texture = ExtResource( 3 )
vframes = 2
hframes = 4
frame = 5

[node name="Shadow" parent="Sprite" instance=ExtResource( 1 )]
material = SubResource( 3 )
texture = ExtResource( 3 )
offset = Vector2( 0, 0 )
vframes = 2
hframes = 4
frame = 5
starting_position = Vector2( 2, 2 )

[node name="Sword" type="Sprite" parent="Sprite"]
visible = false
use_parent_material = true
position = Vector2( 4, -1 )
texture = ExtResource( 7 )

[node name="Shadow" parent="Sprite/Sword" instance=ExtResource( 1 )]
texture = ExtResource( 7 )
offset = Vector2( 0, 0 )
hframes = 1
starting_position = Vector2( 2, 2 )

[node name="Cape" type="Sprite" parent="."]
visible = false
position = Vector2( 104, -8 )
texture = ExtResource( 2 )

[node name="Shadow" parent="Cape" instance=ExtResource( 1 )]
texture = ExtResource( 2 )
offset = Vector2( 0, 0 )
hframes = 1
starting_position = Vector2( 2, 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.15

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "caped"
anims/attacking = SubResource( 13 )
anims/caped = SubResource( 14 )
anims/idle = SubResource( 15 )
anims/intro = SubResource( 16 )
anims/jump = SubResource( 17 )
anims/run = SubResource( 18 )

[node name="Area2D" type="Area2D" parent="." groups=[
"enemy",
]]
collision_layer = 4
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 11 )

[node name="BossArea" type="Area2D" parent="."]
position = Vector2( 8, -64 )
collision_mask = 3
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BossArea"]
visible = false
shape = SubResource( 12 )
[connection signal="timeout" from="HurtTimer" to="." method="_on_HurtTimer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="BossArea" to="BossArea" method="_on_BossArea_body_entered"]
[connection signal="body_entered" from="BossArea" to="." method="_on_BossArea_body_entered"]
[connection signal="body_exited" from="BossArea" to="BossArea" method="_on_BossArea_body_exited"]
